--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,4 @@
 /* HEADER */
-
-.main-container {
-    max-width: 80vw;
-    height: 100vh;
-    margin-left: 320px;
-    margin-right: 56px;
-}
-
 .header-navigation {
     display: flex;
     justify-content: space-between;
@@ -15,6 +7,10 @@
     margin: 10px;
     border-radius: 0.5rem;
     background-color: #121212;
+    padding: 12px;
+    max-width: 80vw;
+    margin-left: 330px;
+    margin-right: 15px;
 }
 
 .header-navigation .navigation {
