--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -31,6 +31,7 @@
 
 .sidebar ul li {
     padding: 10px 0;
+    list-style: none;
 }
 
 .sidebar nav ul li a {
@@ -38,7 +39,10 @@
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: var(--font-dm-sans);
+}
+
+.sidebar nav ul li a span{
+    margin-right: 10px;
 }
 
 .library {
@@ -46,16 +50,22 @@
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
-    min-block-size: 40px;
+    flex-direction: column;
     padding: 4px 8px;
     color: #b3b3b3;
     font-weight: 600;
     font-size: 14px;
     margin-top: 10px;
-    flex-direction: column;
+  
+}
+
+.library-content {
+    display: flex;
+    justify-content: space-between;
 }
 
 .library .library-button {
+    display: flex;
     margin-right: 10px;
     color: #b3b3b3;
     background-color: transparent;
@@ -67,7 +77,6 @@
     text-decoration: none;
     text-transform: none;
     padding: 20px 10px;
-    display: flex;
 }
 
 .library .library-button .fa {
@@ -75,11 +84,6 @@
     margin-right: 10px;
     font-weight: 300;
     padding-right: 8px;
-}
-
-.library-content {
-    display: flex;
-    justify-content: space-between;
 }
 
 .library .library-content .fa-plus {
@@ -128,7 +132,6 @@
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: var(--font-dm-sans);
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -143,7 +146,6 @@
 
 .sidebar .cookies a {
     color: #b3b3b3;
-    font-family: var(--font-dm-sans);
     font-weight: 500;
     font-size: 10px;
     text-decoration: none;
@@ -161,10 +163,14 @@
     color: #fff;
     cursor: pointer;
     font-weight: bold;
-    width: 170px;
+    width: 180px;
     margin: 8px;
     padding: 8px;
 }
+
+.languages .languages-button span {
+    margin-right: 10px;
+  }
 
 .disclaimer-premium {
     position: fixed;
